--- a/accessibility-in-windows-8/index.html
+++ b/accessibility-in-windows-8/index.html
@@ -8,18 +8,23 @@
   </head>
   <body>
     <div class="content">
-      <header class="headerxl"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
-      <section class="sectionindex">
-        <h1><img class="logo" src="i/windows-8-logo.png" alt="Windows 8" /> Accessibility in Windows 8</h1>
+      <header class="headerxl" role="banner"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
+      <div class="main" role="main">
+        <article role="article">
+          <section class="sectionindex" role="region">
+            <h1><img class="logo" src="i/windows-8-logo.png" alt="Windows 8" /> Accessibility in Windows 8</h1>
         <h2 class="header2 header2index">Overview of accessibility in Windows 8, tutorials, and keyboard shortcuts</h2>
         <p class="copyright copyrightli">Published by Microsoft Corporation, Trustworthy Computing</p>
         <p class="copyright copyrightli">One Microsoft Way</p>
         <p class="copyright copyrightli">Redmond, Washington 98052</p>
         <p class="copyright">Copyright © 2012 Microsoft Corporation. All rights reserved. No part of the contents of this document may be reproduced or transmitted in any form or by any means without the written permission of the publisher. For permissions, visit <a href="http://www.microsoft.com/">www.microsoft.com</a>.</p>
         <p class="copyright">Microsoft and Windows are trademarks of Microsoft Corporation in the United States and/or other countries. Find further information on <a href="http://www.microsoft.com/about/legal/en/us/IntellectualProperty/Trademarks/EN-US.aspx">Microsoft Trademarks</a> (<a href="http://www.microsoft.com/about/legal/en/us/IntellectualProperty/Trademarks/EN-US.aspx">http://www.microsoft.com/about/legal/en/us/IntellectualProperty/Trademarks/EN-US.aspx</a>).</p>
-      </section>
-      <header class="headertoc"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
-      <section>
+          </section>
+        </article>
+
+     <!-- <header class="headertoc"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header> -->
+        <article role="article">
+          <section class="sectionindex" role="region">
         <h1><a id="header-toc">Table of Contents</a></h1>
         <ol id="toc" class="toc-root">
           <li><a href="overview.html">Overview of Accessibility in Windows 8</a>
@@ -198,7 +203,8 @@
             </ol>
           </li>
         </ol>
-      </section>
+      </section></article>
+        </div>
       <footer><a href="overview.html" title="Overview">Overview</a></footer>
     </div>
   </body>
