--- a/accessibility-in-windows-8/overview.html
+++ b/accessibility-in-windows-8/overview.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class="content">
-      <header class="header"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
-      <section class="contentsection">
+      <header class="header" role="banner"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
+      <div class="main" role="main">
+        <article role="article">
+          <section class="sectionindex" role="region">
         <h1 id="ova11y">Overview of Accessibility in Windows 8</h1>
         <p>The built-in assistive technologies in Windows 8 work with both Windows 8 applications and with desktop software to provide seamless access to the entire Windows experience.</p>
         <p>Devices running Windows 8 Professional will also allow you to use assistive technology (AT) software from specialty <a href="http://www.microsoft.com/enable/at/" title="http://www.microsoft.com/enable/at/">Assistive Technology vendors</a> (<a href="http://www.microsoft.com/enable/at/">http://www.microsoft.com/enable/at/</a>).</p>
@@ -51,7 +53,8 @@
         <p>The following sections of this document provide information on how to make your device easier to see, hear, and use with settings and options in Ease of Access and Personalization in Windows 8 Professional. It also provides direction on accessing options using your mouse; or touch, for touch-only devices; and, provides a complete list of keyboard shortcuts for those who access their computers through the keyboard. Find more information about Windows 8 Accessibility on the <a href="http://www.microsoft.com/enable/" title="http://www.microsoft.com/enable/">Microsoft Accessibility website</a> (<a href="http://www.microsoft.com/enable/">www.microsoft.com/enable/</a>), and on the<a href="http://windows.microsoft.com/" title="Microsoft Windows ">Microsoft Windows website</a> (<a href="http://windows.microsoft.com/" title="Microsoft Windows">http://windows.microsoft.com/</a>).</p>
         <h3 class="tableheader">Important</h3>
         <p>Windows RT only supports the installation of apps through the Windows Store. Windows 8, or Windows 8 Professional, is required for individuals using assistive technology software or devices. Be sure to check with your<a href="http://www.microsoft.com/enable/at/matvplist.aspx" title="external link">assistive technology manufacturer</a> (<a href="http://www.microsoft.com/enable/at/matvplist.aspx">www.microsoft.com/enable/at/matvplist.aspx</a>) regarding compatibility before purchasing a new Windows 8 device.</p>
-      </section>
+      </section></article>
+        </div>
       <footer><a class="pageno" href="ease-of-access.html" title="Ease of Access &#45; Next Page">Ease of Access</a></footer>
     </div>
   </body>
