--- a/accessibility-in-windows-8/personalization.html
+++ b/accessibility-in-windows-8/personalization.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class="content">
-      <header class="header"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
-      <section>
+      <header class="header" role="banner"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
+      <div class="main" role="main">
+        <article role="article">
+          <section class="sectionindex" role="region">
         <h1>Personalization</h1>
         <h2><a href="http://windows.microsoft.com/en-US/windows-8/customize">Personalize your <abbr>pc</abbr></a></h2>
         <p>If you spend a lot of time using your <abbr>pc</abbr>, you can make it reflect who you are and what you care about. Make yourself at home on the Start screen and arrange it to your liking. Create tiles for your favorite people or websites and drag them anywhere you want—or put similar tiles in their own group. Pin your favorite apps to the Start screen and remove the ones you don't use. You can even change the background and color on your Start screen to match your mood.</p>
@@ -385,7 +387,8 @@
         <p>A Microsoft account—an email address and password—is a new way to sign in to any <abbr>pc</abbr> running Windows 8 or Windows RT. When you sign in with a Microsoft account, your <abbr>pc</abbr> is connected to the cloud, and many of the settings, preferences, and apps associated with your account can "follow" you between different <abbr>pc</abbr>s.</p>
         <p>You can sync your Personalization and Ease of Access settings so that all your accessibility selections are reflected in your computer settings.</p>
         <p>Your personal settings are automatically synced online and between the Windows 8 and Windows RT <abbr>pc</abbr>s you use. This includes items like your themes, language preferences, browser favorites and history, and content for Microsoft apps and services <a href="http://windows.microsoft.com/en-US/windows-8/microsoft-account#1TC=t1" title="http://windows.microsoft.com/en-US/windows-8/microsoft-account#1TC=t1">Find out more</a>(<a href="http://windows.microsoft.com/en-US/windows-8/microsoft-account#1TC=t1">http://windows.microsoft.com/en-US/windows-8/microsoft-account#1TC=t1</a>).</p>
-      </section>
+      </section></article>
+        </div>
       <footer><a class="pageno" href="mouse-and-keyboard.html" title="Mouse and Keyboard">Mouse and Keyboard</a></footer>
     </div>
   </body>
