--- a/accessibility-in-windows-8/ease-of-access.html
+++ b/accessibility-in-windows-8/ease-of-access.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class="content">
-      <header class="header"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
-      <section>
+      <header class="header" role="banner"><img src="i/image045-272x100.png" alt="Microsoft" class="branding" /></header>
+      <div class="main" role="main">
+        <article role="article">
+          <section role="region">
         <h1 id="h1easeofaccess">Ease of Access</h1>
         <p>Windows offers several programs and settings that can make the computer easier and more comfortable to use. This section tells you how to find and set up accessibility options whether you use a mouse and keyboard, or a touch-enabled computer.</p>
         <h2><a id="makepc" href="http://windows.microsoft.com/en-US/windows-8/make-pc-easier-use/">Make your <abbr>pc</abbr> easier to use</a></h2>
@@ -618,7 +620,8 @@
           </ul>
         </li>
       </ol>
-      </section>
+      </section></article>
+        </div>
       <footer><a class="pageno" href="personalization.html" title="Personalization">Personalization</a></footer>
     </div>
   </body>
