--- a/accessibility-in-windows-8/ease-of-access.html
+++ b/accessibility-in-windows-8/ease-of-access.html
@@ -21,7 +21,7 @@
           <li>The most commonly used accessibility options are available from the sign-in screen. Click the Ease of Access button <img class="imginline icon" src="i/icon-ease-of-access.jpg" alt="Ease of Access Button Icon" /> in the lower-left corner to choose those settings for your <abbr>pc</abbr> that you want to have available each time it starts.</li>
           <li>For more information about these and other assistive technologies, go to the Microsoft Accessibility website (<a href="http://www.microsoft.com/enable/">http://www.microsoft.com/enable/</a>).</li>
         </ul></div>
-        <h3 class="tableheader">Customizing the Ease of Access page</h3>
+        <h3 id="customize" class="tableheader">Customizing the Ease of Access page</h3>
         <p>You can find a few more settings on the Ease of Access page—a convenient summary page where you can change common settings.</p>
         <ol>
           <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
@@ -43,7 +43,7 @@
   <li>4. <strong>Show notifications for</strong>. If you find that notifications appear and disappear too quickly, you can change how long they’re visible—so you have time to read and react to them.</li>
   <li>5. <strong>Cursor thickness</strong>. If the cursor is too small for you and hard to spot on the screen, use this setting to change its thickness.</li>
 </ol>
-<h3 class="tableheader">Choosing more tools and settings in the Ease of Access Center</h3>
+<h3 id="choosemore" class="tableheader">Choosing more tools and settings in the Ease of Access Center</h3>
 <p>The Ease of Access Center in Windows 8 Professional gives you the most control for customizing your accessibility settings.</p>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>. Or, from the Start screen, press the Windows logo key  <img class="imginline icon" src="i/icon-windows-logo-button.jpg" alt="Windows Logo Button Icon" /> + C.)</li>
@@ -67,14 +67,14 @@
 <li>• <strong>Make it easier to focus on tasks</strong>. These settings include a number of ways to help you focus on reading and typing. Use them to turn on Narrator, adjust how the keyboard responds to certain keystrokes, and change the way certain visual elements are displayed.</li>
 <li>• <strong>Make touch and tablets easier to use</strong>. When you choose this option, Narrator starts automatically when you press the Windows logo button  <img class="imginline icon" src="i/icon-windows-logo-button.jpg" alt="Windows Logo Button Icon" /> and Volume Up button together. You can change this so Magnifier or On-Screen Keyboard starts instead.</li>
 </ul>
-<h3 class="tableheader">Get recommendations for Ease of Access settings</h3>
+<h3 id="getrecs" class="tableheader">Get recommendations for Ease of Access settings</h3>
 <p>If you're not sure which settings to use, fill out the Ease of Access questionnaire to get recommendations.</p>
 <ol>
 <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
 <li>2. Enter <strong>current accessibility settings</strong> in the search box, tap or click <strong>Settings</strong>, and then tap or click <strong>View current accessibility settings</strong>.</li>
 <li>3. Tap or click <strong>Get recommendations to make your computer easier to use</strong>.</li>
 </ol>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/make-text-screen-larger-smaller/">Make the text on your screen larger or smaller</a></h2>
+<h2><a id="changetext" href="http://windows.microsoft.com/en-US/windows-8/make-text-screen-larger-smaller/">Make the text on your screen larger or smaller</a></h2>
 <p>You can make the text (and other things like icons) larger without changing the screen resolution of your monitor or laptop screen. That way, you can make text easier to see and still keep your monitor or laptop set to the best possible resolution.</p>
 <ol>
 <li>1. Open Screen Resolution by swiping in from the right edge of the screen, tapping <strong>Search</strong> (or if you're using a mouse, pointing to the upper-right corner of the screen, moving the mouse pointer down, and then clicking <strong>Search</strong>), entering <strong>Display</strong> in the search box, tapping or clicking <strong>Settings</strong>, and then tapping or clicking <strong>Display</strong>.</li>
@@ -97,9 +97,9 @@
 <p>You'll see the change the next time you sign in to Windows.</p>
 <p>You can also make text appear larger or smaller by changing your screen resolution, but if you're using an LCD monitor or laptop, it's a good idea to set your screen to its native resolution to avoid blurry text. This is the resolution that a monitor or laptop screen was designed to display based on its size. For more info, see <strong><a href="http://windows.microsoft.com/en-US/windows-8/get-best-display-monitor">Get the best display on your monitor</a></strong>.</p>
 <div class="note"><p><strong class="block">Note:</strong> You can't change the default font or font color used for items in Windows (like window title bars, menus, or tooltips). But you can change the color of your window borders and taskbar, or use a High Contrast Theme to make the items on your screen easier to see. For more info, see <a href="http://windows.microsoft.com/en-US/windows-8/get-started-with-themes" title="http://windows.microsoft.com/en-US/windows-8/get-started-with-themes">Get started with themes</a>.</p></div>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/hear-text-read-aloud-with-narrator">Hear text read aloud with Narrator</a></h2>
+<h2><a id="heartext" href="http://windows.microsoft.com/en-US/windows-8/hear-text-read-aloud-with-narrator">Hear text read aloud with Narrator</a></h2>
 <p>Narrator is a screen reader that reads text on the screen aloud and describes events like error messages so you can use your computer without a display.</p>
-<h3 class="tableheader">Starting Narrator</h3>
+<h3 id="startnarrator" class="tableheader">Starting Narrator</h3>
 <p>There are different ways to start Narrator. These are the three shortcuts many people prefer:</p>
 <ul>
   <li>• On a keyboard, press the Windows logo key <img class="imginline icon" src="i/icon-windows-logo-button.jpg" alt="Windows Logo Button Icon" />  +Enter.</li>
@@ -278,7 +278,7 @@
 <h2><a href="http://windows.microsoft.com/en-US/windows-8/using-speech-recognition/" title="http://windows.microsoft.com/en-US/windows-8/using-speech-recognition/">Using Speech Recognition</a></h2>
 <p>Windows Speech Recognition makes using a keyboard and mouse optional. You can control your <abbr>pc</abbr> with your voice and dictate text instead.</p>
 <div class="note"><p><strong class="block">Note:</strong> Speech Recognition isn't available in all languages.</p></div>
-<h3 class="tableheader">Set up Speech Recognition</h3>
+<h3 id="setupsr" class="tableheader">Set up Speech Recognition</h3>
 <p>There are a few steps you need to take before you can start using Speech Recognition. First, you’ll need to set up a microphone. Next, it’s a good idea to take the tutorial to learn how to use Speech Recognition effectively. Finally, you can train your <abbr>pc</abbr> to recognize your voice.</p>
 <p><em>To set up a microphone</em></p>
 <p>Before you set up Speech Recognition, make sure you've plugged the microphone into your <abbr>pc</abbr> so the following steps work.</p>
@@ -304,7 +304,7 @@
   <li>3. Tap or click <strong>Train your computer to better understand you</strong>.</li>
 <li>4. Follow the instructions in the Speech Recognition Voice Training.</li>
 </ol>
-<h3 class="tableheader">Using Speech Recognition</h3>
+<h3 id="usingsr2" class="tableheader">Using Speech Recognition</h3>
 <p>You can use your voice for many things, such as filling out online forms or typing letters. When you speak into the microphone, Speech Recognition changes your spoken words into text on the screen.</p>
 <p><em>To dictate text using speech recognition</em></p>
 <ol>
@@ -335,7 +335,7 @@
 </ul>
 </li> 
 </ol>
-<h3 class="tableheader">Controlling your <abbr>pc</abbr> with Speech Recognition</h3>
+<h3 id="controlpcwithsr" class="tableheader">Controlling your <abbr>pc</abbr> with Speech Recognition</h3>
 <p>You can use simple, short commands to control your <abbr>pc</abbr>. The following table shows some of the most commonly used Speech Recognition commands. Words in italics mean you can replace the example word or phrase with similar words and get useful results.</p>
 <div class="note"><p><strong class="block">Note:</strong> Any time you need to find out what commands to use, say "what can I say?"</p></div>
 <table>
@@ -360,7 +360,7 @@
     <tr><td><p>View Windows Help and Support content about specific tasks</p></td><td><p>How do I do something?</p><p>For example, say “How do I install a printer?” and a list of Help topics is returned.</p><p>Note that this command is available only if you're using the U.S. English Speech Recognizer.</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Dictation Commands and Resulting Actions</h3>
+<h3 id="dictation" class="tableheader">Dictation Commands and Resulting Actions</h3>
 <table border="1" cellspacing="0" cellpadding="0" width="100%">
   <caption></caption>
   <thead><tr><th>To do this</th><th>Say this</th></tr></thead>
@@ -398,7 +398,7 @@
     <tr><td><p>Delete the selected or last dictated text</p></td><td><p>Delete that</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Keyboard keys</h3>
+<h3 id="keyboardkeys" class="tableheader">Keyboard keys</h3>
 <table>
   <caption>Keyboard Keyss and Resulting Actions</caption>
   <thead><tr><th>To do this</th><th>Say this</th></tr></thead>
@@ -413,7 +413,7 @@
       <li>• Using Speech Recognition to press keyboard keys works only with languages that use <br /> Latin alphabets.</li>
   </ul>
 </div>
-<h3 class="tableheader">Punctuation marks and special characters</h3>
+<h3 id="pmarkschars" class="tableheader">Punctuation marks and special characters</h3>
 <table>
   <caption>Punctuation Marks&#47;Special Characters Commands and Resulting Actions</caption>
   <thead><tr><th>To insert this</th><th>Say this</th></tr></thead>
@@ -482,7 +482,7 @@
     <tr><td><p>ƒ</p></td><td><p>Function sign</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Controls</h3>
+<h3 id="controls" class="tableheader">Controls</h3>
 <table>
   <caption>Controls Commands and their Resulting Action(s)</caption>
   <thead><tr><th>To do this</th><th>Say this</th></tr></thead>
@@ -498,7 +498,7 @@
     <tr><td><p>Press and hold or right-click <br /> a numbered item</p></td><td><p>Right-click 19; Right-click 5</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Windows</h3>
+<h3 id="window" class="tableheader">Windows</h3>
 <table>
   <caption>Windows Commands and Resulting Action(s)</caption>
   <thead><tr><th>To do this</th><th>Say this</th></tr></thead>
@@ -520,7 +520,7 @@
     <tr><td><p>Go to a field in a form or an app</p></td><td><p>Go to field name; Go to Subject; Go to Address; Go to cc</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Tap or click anywhere on the screen</h3>
+<h3 id="tapclick" class="tableheader">Tap or click anywhere on the screen</h3>
 <table>
   <caption>Tap&#47;Click Anywhere on the Screen Command(s) and Results</caption>
   <thead><tr><th>To do this</th><th>Say this</th></tr></thead>
@@ -532,9 +532,9 @@
     <tr><td><p>Select an area in the mousegrid where you want to drag the item</p></td><td><p>Number of the square where you want to drag; 4, 5, 6 (followed by) click</p></td></tr>
   </tbody>
 </table>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/use-magnifier-to-see-items/" title="http://windows.microsoft.com/en-US/windows-8/use-magnifier-to-see-items/">Use Magnifier to see items on the screen</a></h2>
+<h2><a id="usemagnifier" href="http://windows.microsoft.com/en-US/windows-8/use-magnifier-to-see-items/" title="http://windows.microsoft.com/en-US/windows-8/use-magnifier-to-see-items/">Use Magnifier to see items on the screen</a></h2>
 <p>Magnifier is a useful tool that enlarges part—or all—of your screen so you can see the words and images better. It comes with a few different settings, so you can use it the way that suits you best.</p>
-<h3 class="tableheader">Using Magnifier</h3>
+<h3 id="usingmagnifier" class="tableheader">Using Magnifier</h3>
 <p>You can open and close Magnifier quickly so it's handy when you need it and it's out of your way when you don't.</p>
 <p><em>To open Magnifier</em></p>
 <ol>
@@ -553,14 +553,14 @@
           </ul>
     </div>
 
-    <h3 class="tableheader">Changing Magnifier views</h3>
+    <h3 id="changemagnifier" class="tableheader">Changing Magnifier views</h3>
       <p>You can use Magnifier in a few ways, depending on how you like to work: Full-screen, lens, and docked. Try them all to find out which one you prefer.</p>
       <ul>
         <li>• <strong>Full-screen</strong>. In this view, your entire screen is magnified. You probably won’t be able to see the whole screen at the same time when it’s magnified, but as you move around the screen, you can see everything. If you have a touchscreen, Magnifier will display white borders around the edge of your screen. Drag your finger or mouse along the borders to move around the screen.</li>
         <li>• <strong>Lens</strong>. In this view, when you move around the screen, it’s like moving a magnifying glass around.</li>
         <li>• <strong>Docked</strong>. Docked view works on the Windows desktop. In this view, a magnifier is docked to portion of your screen. As you move around the screen, parts of the screen appear magnified in the docking area, even though the main part of the screen is unchanged.</li>
       </ul>
-      <h3 class="tableheader">Customizing Magnifier</h3>
+      <h3 id="customizemagnifier" class="tableheader">Customizing Magnifier</h3>
       <p>You can change the way Magnifier works. For example, you can use the zoom buttons ( and ) to change how much Magnifier enlarges your screen. Pressing Windows + Plus and Windows + Minus on your keyboard is another quick way to zoom in and out. You can also open the Magnifier options button to <br /> change Magnifier.</p>
       <div class="note"><p><strong class="block">Note:</strong> You can set Magnifier to follow your mouse, the insertion point, or the keyboard. Follow the instructions below to customize Magnifier.</p></div>
       <ol>
@@ -577,10 +577,10 @@
 </li>
       </ol>
       <div class="note"><p><strong class="block">Note:</strong> When you open Magnifier, the Magnifier toolbar appears briefly. It quickly gets out of your way, but you can display it again by clicking the magnifying glass icon on your screen or the Magnifier icon on the taskbar.</p></div>
-      <h2><a href="http://windows.microsoft.com/en-US/windows-8/type-with-the-on-screen-keyboard">Use the On-Screen Keyboard (OSK) to type</a></h2>
+      <h2><a id="osk" href="http://windows.microsoft.com/en-US/windows-8/type-with-the-on-screen-keyboard">Use the On-Screen Keyboard (OSK) to type</a></h2>
       <p>There are a few different kinds of keyboards. The most common is a physical, external keyboard that you plug into your <abbr>pc</abbr>. A <abbr>pc</abbr> with a touchscreen also has a touch keyboard. When you’re using a Windows 8 or Windows RT <abbr>pc</abbr> with a touchscreen, tap in a text field or other area where you can type and the touch keyboard appears. For more info about the touch keyboard, see <a href="http://windows.microsoft.com/en-US/windows-8/using-touch-keyboard/" title="http://windows.microsoft.com/en-US/windows-8/using-touch-keyboard/">How to use the touch keyboard</a>.</p>
       <p>Windows also has On-Screen Keyboard (OSK), an Ease of Access tool. You can use OSK instead of relying on the physical keyboard to type and enter data. You don’t need a touchscreen to use On-Screen Keyboard. OSK displays a visual keyboard with all the standard keys. You can select keys using the mouse or another pointing device, or you can use a physical single key or group of keys to cycle through the keys on the screen.</p>
-      <h3 class="tableheader">To open On-Screen Keyboard</h3>
+      <h3 id="openosk" class="tableheader">To open On-Screen Keyboard</h3>
       <ol>
 <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. <br /> (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
 <li>2. In the search box, enter <strong>On-Screen Keyboard</strong>, tap or click <strong>Apps</strong>, and then tap or click <strong>On-Screen Keyboard</strong>.</li>
@@ -607,9 +607,9 @@
           <li>• If you're using either hovering mode or scanning mode and accidently minimize On-Screen Keyboard, you can restore it by pointing to it in the taskbar (for hovering mode) or by pressing the scan key (for scanning mode).</li>
           <li>• If you minimize OSK and switch to the Start screen or a full-screen app, you won't be able to get to OSK. Open OSK first, and then go to the Start screen or app.</li>
         </ul></div>
-      <h2><a href="http://windows.microsoft.com/en-US/windows-8/use-visual-alternatives-to-sounds/">Use text or visual alternatives to sounds</a></h2>
+      <h2><a id="soundalt" href="http://windows.microsoft.com/en-US/windows-8/use-visual-alternatives-to-sounds/">Use text or visual alternatives to sounds</a></h2>
       <p>You can use visual cues rather than sounds in many apps by changing your <abbr>pc</abbr> settings.</p>
-      <h3 class="tableheader">To change your settings</h3>
+      <h3 id="changesettings" class="tableheader">To change your settings</h3>
       <ol>
         <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. <br /> (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
         <li>2. In the search box, enter <strong>Replace sounds with visual cues</strong>, tap or click <strong>Settings</strong>, and then tap or click <strong>Replace sounds with visual cues</strong>.</li>
