--- a/accessibility-in-windows-8/index.html
+++ b/accessibility-in-windows-8/index.html
@@ -39,96 +39,96 @@
           </li>
           <li><a href="ease-of-access.html">Ease of Access</a>
             <ol class="toc-sub">
-              <li><a href="#makepc">Make your PC easier to use</a>
+              <li><a href="ease-of-access.html#makepc">Make your PC easier to use</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#customize">Customizing the Ease of Access page</a></li>
-                  <li><a href="#choosemore">Choosing more tools and settings in the Ease of Access Center</a></li>
-                  <li><a href="#getrecs">Get recommendations for Ease of Access settings</a></li>
+                  <li><a href="ease-of-access.html#customize">Customizing the Ease of Access page</a></li>
+                  <li><a href="ease-of-access.html#choosemore">Choosing more tools and settings in the Ease of Access Center</a></li>
+                  <li><a href="ease-of-access.html#getrecs">Get recommendations for Ease of Access settings</a></li>
                 </ol>
               </li>
-              <li><a href="#changetext">Make the text on your screen larger or smaller</a></li>
-              <li><a href="#heartext">Hear text read aloud with Narrator</a>
+              <li><a href="ease-of-access.html#changetext">Make the text on your screen larger or smaller</a></li>
+              <li><a href="ease-of-access.html#heartext">Hear text read aloud with Narrator</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#startnarrator">Starting Narrator</a></li>
-                  <li><a href="#newtouchgestures">New touch gestures</a></li>
-                  <li><a href="#newkeyboardshortcuts">New keyboard shortcuts</a></li>
-                  <li><a href="#narratorsettings">Narrator settings</a></li>
+                  <li><a href="ease-of-access.html#startnarrator">Starting Narrator</a></li>
+                  <li><a href="ease-of-access.html#newtouchgestures">New touch gestures</a></li>
+                  <li><a href="ease-of-access.html#newkeyboardshortcuts">New keyboard shortcuts</a></li>
+                  <li><a href="ease-of-access.html#narratorsettings">Narrator settings</a></li>
                 </ol>
               </li>
-              <li><a href="#usingsr">Using Speech Recognition</a>
+              <li><a href="ease-of-access.html#usingsr">Using Speech Recognition</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#setupsr">Set up Speech Recognition</a></li>
-                  <li><a href="#usingsr">Using Speech Recognition</a></li>
-                  <li><a href="#controlpcwithsr">Controlling your PC with Speech Recognition</a></li>
-                  <li><a href="#dictation">Dictation</a></li>
-                  <li><a href="#keyboardkeys">Keyboard keys</a></li>
-                  <li><a href="#pmarkschars">Punctuation marks and special characters</a></li>
-                  <li><a href="#controls">Controls</a></li>
-                  <li><a href="#window">Windows</a></li>
-                  <li><a href="#tapclick">Tap or click anywhere on the screen</a></li>
+                  <li><a href="ease-of-access.html#setupsr">Set up Speech Recognition</a></li>
+                  <li><a href="ease-of-access.html#usingsr2">Using Speech Recognition</a></li>
+                  <li><a href="ease-of-access.html#controlpcwithsr">Controlling your PC with Speech Recognition</a></li>
+                  <li><a href="ease-of-access.html#dictation">Dictation</a></li>
+                  <li><a href="ease-of-access.html#keyboardkeys">Keyboard keys</a></li>
+                  <li><a href="ease-of-access.html#pmarkschars">Punctuation marks and special characters</a></li>
+                  <li><a href="ease-of-access.html#controls">Controls</a></li>
+                  <li><a href="ease-of-access.html#window">Windows</a></li>
+                  <li><a href="ease-of-access.html#tapclick">Tap or click anywhere on the screen</a></li>
                 </ol>
               </li>
-              <li><a href="#usemagnifier">Use Magnifier to see items on the screen</a>
+              <li><a href="ease-of-access.html#usemagnifier">Use Magnifier to see items on the screen</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#usingmagnifier">Using Magnifier</a></li>
-                  <li><a href="#changemagnifier">Changing Magnifier views</a></li>
-                  <li><a href="#customizemagnifier">Customizing Magnifier</a></li>
+                  <li><a href="ease-of-access.html#usingmagnifier">Using Magnifier</a></li>
+                  <li><a href="ease-of-access.html#changemagnifier">Changing Magnifier views</a></li>
+                  <li><a href="ease-of-access.html#customizemagnifier">Customizing Magnifier</a></li>
                 </ol>
               </li>
-              <li><a href="#osk">Use the On-Screen Keyboard (OSK) to type</a>
+              <li><a href="ease-of-access.html#osk">Use the On-Screen Keyboard (OSK) to type</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#openosk">To open On-Screen Keyboard</a></li>
+                  <li><a href="ease-of-access.html#openosk">To open On-Screen Keyboard</a></li>
                 </ol>
               </li>
-              <li><a href="#soundalt">Use text or visual alternatives to sounds</a>
+              <li><a href="ease-of-access.html#soundalt">Use text or visual alternatives to sounds</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#changesettings">To change your settings</a></li>
+                  <li><a href="ease-of-access.html#changesettings">To change your settings</a></li>
                 </ol>
               </li>
             </ol>
           </li>
-          <li><a href="#personalization">Personalization</a>
+          <li><a href="personalization.html">Personalization</a>
             <ol class="toc-sub">
-              <li><a href="#personalize">Personalize your PC</a></li>
-              <li><a href="#personalizeopts">Change your background, colors, and account picture</a>
+              <li><a href="personalization.html#personalize">Personalize your PC</a></li>
+              <li><a href="personalization.html#personalizeopts">Change your background, colors, and account picture</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#themes">Themes and desktop backgrounds</a></li>
+                  <li><a href="personalization.html#themes">Themes and desktop backgrounds</a></li>
                 </ol>
               </li>
-              <li><a href="#customstart">Customize the Start screen</a>
+              <li><a href="personalization.html#customstart">Customize the Start screen</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#createtile">Create tiles for your favorite people and places</a></li>
-                  <li><a href="#pinunpin">Pin or unpin apps</a></li>
-                  <li><a href="#rearrangeresize">Rearrange and resize tiles</a></li>
+                  <li><a href="personalization.html#createtile">Create tiles for your favorite people and places</a></li>
+                  <li><a href="personalization.html#pinunpin">Pin or unpin apps</a></li>
+                  <li><a href="personalization.html#rearrangeresize">Rearrange and resize tiles</a></li>
                 </ol>
               </li>
-              <li><a href="#rearrangeonstart">Rearranging tiles on Start</a></li>
-              <li><a href="#themestart">Get started with themes</a>
+              <li><a href="personalization.html#rearrangeonstart">Rearranging tiles on Start</a></li>
+              <li><a href="personalization.html#themestart">Get started with themes</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#themewhat">What's a theme?</a></li>
-                  <li><a href="#themecreate">Creating themes</a></li>
+                  <li><a href="personalization.html#themewhat">What's a theme?</a></li>
+                  <li><a href="personalization.html#themecreate">Creating themes</a></li>
                 </ol>
               </li>
-              <li><a href="#wherescontrolpanel">Where is Control Panel?</a></li>
-              <li><a href="#usetaskbar">How to use the taskbar</a>
+              <li><a href="personalization.html#wherescontrolpanel">Where is Control Panel?</a></li>
+              <li><a href="personalization.html#usetaskbar">How to use the taskbar</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#taskbarrearrange">Rearrange taskbar buttons</a></li>
-                  <li><a href="#taskbarmove">Move the taskbar</a></li>
-                  <li><a href="#taskbaredit">Change how taskbar buttons appear</a></li>
-                  <li><a href="#taskbarpinapp">Pin an app to the taskbar</a></li>
-                  <li><a href="#taskbarnotifications">Customize the notification area</a></li>
-                  <li><a href="#lookatdesktop">Take a look at the desktop</a></li>
-                  <li><a href="#multipledisplaysettings">Change taskbar settings for multiple displays</a></li>
+                  <li><a href="personalization.html#taskbarrearrange">Rearrange taskbar buttons</a></li>
+                  <li><a href="personalization.html#taskbarmove">Move the taskbar</a></li>
+                  <li><a href="personalization.html#taskbaredit">Change how taskbar buttons appear</a></li>
+                  <li><a href="personalization.html#taskbarpinapp">Pin an app to the taskbar</a></li>
+                  <li><a href="personalization.html#taskbarnotifications">Customize the notification area</a></li>
+                  <li><a href="personalization.html#lookatdesktop">Take a look at the desktop</a></li>
+                  <li><a href="personalization.html#multipledisplaysettings">Change taskbar settings for multiple displays</a></li>
                 </ol>
               </li>
-              <li><a href="#startoptions">Adding apps, websites, and more to Start</a></li>
-              <li><a href="#multiplemonitors">Connect multiple monitors to your PC</a>
+              <li><a href="personalization.html#startoptions">Adding apps, websites, and more to Start</a></li>
+              <li><a href="personalization.html#multiplemonitors">Connect multiple monitors to your PC</a>
                 <ol class="toc-sub-sub">
-                  <li><a href="#connectnewscreen">Connect another screen to your PC</a></li>
-                  <li><a href="#setupscreens">Set up your screens</a></li>
+                  <li><a href="personalization.html#connectnewscreen">Connect another screen to your PC</a></li>
+                  <li><a href="personalization.html#setupscreens">Set up your screens</a></li>
                 </ol>
               </li>
-              <li><a href="#syncyoursettings">Sync your settings</a></li>
+              <li><a href="personalization.html#syncyoursettings">Sync your settings</a></li>
             </ol>
           </li>
           <li><a href="#mouseandkeyboard">Mouse and Keyboard</a>
